refactor: ✨ FirestoreManager
But actually it's full of nastiness.
Trying to resolve PMD. Need to revisit.